--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
+
 language: node_js
 node_js:
-  - 7
-  before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
-  - export PATH="$HOME/.yarn/bin:$PATH"
-  cache: yarn
+  - "lts/*"
+install:
+  - yarn install
+# jobs:
+#   include:
+#     - stage: "Tests"
+#       name: "Lint"
+#       script: npm run lint
