--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
     "create-react-app": "^3.1.0",
     "electron": "6.0.2",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.3",
-    "webpack-cli": "^3.3.7"
+    "typescript": "^3.5.3"
   },
   "scripts": {
-    "start": "electron .",
+    "start": "yarn build && electron .",
     "rstart": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "serve": "serve -s build",
-    "webp": "webpack"
+    "serve": "serve -s build"
   },
   "dependencies": {
     "@types/react": "^16.9.2",
@@ -31,8 +29,6 @@
     "react": "^16.5.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^1.0.11",
-    "react-sidebar": "^3.0.2",
-    "ts-loader": "^6.0.4",
-    "webpack": "^4.39.2"
+    "react-sidebar": "^3.0.2"
   }
 }
