--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-
-language: node_js
-node_js:
-  - "lts/*"
-install:
-  - yarn install
+# language: node_js
+# node_js:
+#  - "lts/*"
+# install:
+#  - yarn install
 # jobs:
 #   include:
 #     - stage: "Tests"
